fixed overflowing background

--- a/src/layouts/Main/Main.scss
+++ b/src/layouts/Main/Main.scss
@@ -3,6 +3,6 @@
 
 main {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
 }
